--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@hyrious/esbuild-dev": "^0.8.2",
     "@hyrious/utils": "^0.0.5",
+    "@types/debug": "^4.1.7",
     "@types/github-slugger": "^1.3.0",
     "@types/js-yaml": "^4.0.5",
     "@types/katex": "^0.14.0",
