--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "endOfLine": "auto",
-  "printWidth": 110
+  "printWidth": 110,
+  "semi": false,
+  "trailingComma": "all",
+  "singleQuote": true,
+  "quoteProps": "consistent"
 }
