--- a/package.json
+++ b/package.json
@@ -1,50 +1,48 @@
 {
   "name": "@hyrious/telegraph",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "https://hyrious.me",
-  "type": "module",
-  "exports": "./dist/index.js",
-  "bin": {
-    "tg": "./dist/bin.js"
-  },
-  "types": "./src/index.ts",
-  "files": [
-    "src",
-    "dist"
-  ],
-  "scripts": {
-    "build": "esbuild-dev scripts/build.ts",
-    "test:e2e": "npm run build && node dist/bin.js e2e -w"
-  },
-  "dependencies": {
-    "chokidar": "^3.5.3",
-    "debug": "^4.3.4",
-    "esbuild": "^0.15.5",
-    "github-slugger": "^1.4.0",
-    "highlight.js": "^11.6.0",
-    "js-yaml": "^4.1.0",
-    "katex": "^0.16.0",
-    "markdown-it-emoji": "^2.0.2",
-    "marked": "^4.0.19",
-    "sade": "^1.8.1",
-    "sirv": "^2.0.2"
-  },
-  "devDependencies": {
-    "@hyrious/esbuild-dev": "^0.8.2",
-    "@hyrious/utils": "^0.0.5",
-    "@types/debug": "^4.1.7",
-    "@types/github-slugger": "^1.3.0",
-    "@types/js-yaml": "^4.0.5",
-    "@types/katex": "^0.14.0",
-    "@types/marked": "^4.0.6",
-    "@types/node": "^18.7.11",
-    "escape-goat": "^4.0.0",
-    "mimic-fn": "^4.0.0"
-  },
-  "repository": "hyrious/telegraph",
   "keywords": [
     "blog"
   ],
+  "repository": "hyrious/telegraph",
+  "license": "MIT",
   "author": "hyrious <hyrious@outlook.com>",
-  "license": "MIT"
+  "type": "module",
+  "exports": {
+    ".": "./index.js",
+    "./package.json": "./package.json"
+  },
+  "types": "./index.d.ts",
+  "bin": {
+    "tg": "./bin.js"
+  },
+  "files": [
+    "lib",
+    "index.js",
+    "index.d.ts",
+    "bin.js"
+  ],
+  "dependencies": {
+    "@hyrious/esbuild-plugin-http": "^0.1.1",
+    "@hyrious/rimraf": "^0.1.0",
+    "ap-style-title-case": "^2.0.0",
+    "chokidar": "^3.5.3",
+    "github-slugger": "^2.0.0",
+    "highlight.js": "^11.7.0",
+    "js-yaml": "^4.1.0",
+    "katex": "^0.16.4",
+    "marked": "^4.2.5",
+    "marked-gfm-heading-id": "^2.0.2",
+    "marked-linkify-it": "^2.0.0",
+    "sade": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/marked": "^4.0.8",
+    "@types/node": "^18.11.18",
+    "esbuild": "^0.15.18"
+  },
+  "peerDependencies": {
+    "esbuild": "*"
+  }
 }
