--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "endOfLine": "auto",
-  "printWidth": 110,
-  "semi": false,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "quoteProps": "consistent"
+  'endOfLine': 'auto',
+  'printWidth': 110,
+  'semi': false,
+  'trailingComma': 'all',
+  'singleQuote': true,
+  'quoteProps': 'consistent',
+  'arrowParens': 'avoid',
 }
