--- a/package.json
+++ b/package.json
@@ -24,26 +24,27 @@
     "bin.js"
   ],
   "dependencies": {
-    "@hyrious/esbuild-plugin-http": "^0.1.2",
+    "@hyrious/esbuild-plugin-http": "^0.1.3",
     "ap-style-title-case": "^2.0.0",
     "chokidar": "^3.5.3",
     "clean-stack": "^5.2.0",
     "github-slugger": "^2.0.0",
     "highlight.js": "^11.8.0",
+    "html-minifier": "^4.0.0",
     "js-yaml": "^4.1.0",
-    "katex": "^0.16.8",
-    "marked": "^5.1.0",
-    "marked-gfm-heading-id": "^3.0.4",
-    "marked-highlight": "^2.0.1",
-    "marked-linkify-it": "^3.0.2",
+    "katex": "^0.16.9",
+    "marked": "^9.1.0",
+    "marked-gfm-heading-id": "^3.1.0",
+    "marked-highlight": "^2.0.6",
+    "marked-linkify-it": "^3.1.4",
     "mrmime": "^1.0.1",
     "sade": "^1.8.1",
     "yoctocolors": "^1.0.0"
   },
   "devDependencies": {
-    "@types/marked": "^5.0.0",
-    "@types/node": "^18.16.18",
-    "esbuild": "^0.18.10"
+    "@types/html-minifier": "^4.0.3",
+    "@types/node": "^18.18.4",
+    "esbuild": "^0.19.4"
   },
   "peerDependencies": {
     "esbuild": "*"
